Implement user experience while making a contact us
