# controllers/contact.controller.js
@@ -1,5 +1,4 @@
 import { sendContactConfirmationEmail } from "../middleware";
-import { sendNotificationEmail } from "../middleware/sendNotificationEmail";
 import Contact from "../models/contact.model";
 import errorHandler, { catchAsyncError } from "../utils/errorhandler.utlity";
 import { contactsValidationSchema } from "../validation/data.validation";
@@ -14,26 +13,21 @@ export const createContact = catchAsyncError(async (req, res, next) => {
     return next(new errorHandler(errorMessage, 400));
   }
 
-  const { firstname, lastname, email, address, message } = req.body;
+  const { firstname, lastname, email, subject, message } = req.body;
 
   const newContact = await Contact.create({
     firstname,
     lastname,
     email,
-    address,
+    subject,
     message,
   });
 
-  sendContactConfirmationEmail(email, firstname);
-
-  // Send a notification email to the platform
-  const subject = "New Contact Us Message Received";
-  sendNotificationEmail(
+  sendContactConfirmationEmail(
     email,
-    `${firstname} ${lastname}`,
+    firstname + " " + lastname,
     subject,
-    message,
-    process.env.PLATFORM_EMAIL
+    message
   );
 
   res.status(201).json({
