# models/contact.model.js
@@ -5,7 +5,7 @@ const contactSchema = new mongoose.Schema(
     firstname: { type: String, required: true },
     lastname: { type: String, required: true },
     email: { type: String, required: true },
-    address: { type: String, required: true },
+    subject: { type: String, required: true },
     message: { type: String, required: true },
   },
   {
